@@ -48,6 +48,9 @@ Release 1.1.3 (in development)
 
 * #870: Fix spurious KeyErrors when removing documents.
 
+* #892: Fix single-HTML builder misbehaving with the master document in a
+  subdirectory.
+
 
 Release 1.1.2 (Nov 1, 2011) -- 1.1.1 is a silly version number anyway!
 ======================================================================
